gccida/c0/gen_block_die
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_block_die/src/dwarf2out.c:11717:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v3; // [rsp+8h] [rbp-48h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_block_die/src/dwarf2out.c:11753:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 <= DINFO_LEVEL_TERSE ) 
                    ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_block_die/src/obj/dwarf2out.o] Error 1
